# goose-issue-fixer

./: .gitignore  README.md  check-ci.sh  check-issue.sh  check-pr.sh  fix  instructions-find-issues.txt  instructions-fixing.txt  instructions-iterating.txt  instructions-starting.txt  jira-config  solve  test-cases.md
jira-similarity-util/: Cargo.toml  README.md
jira-similarity-util/src/: issue_contextualizer.rs  jira_client.rs  lib.rs  main.rs
jira-similarity-util/src/templates/: instructions-starting.txt
pr-similarity-util/: Cargo.toml
pr-similarity-util/examples/: search_prs.rs
pr-similarity-util/sample_data/closed/: pr_804.txt  pr_806.txt  pr_807.txt  pr_808.txt  pr_809.txt  pr_810.txt  pr_811.txt  pr_813.txt  pr_814.txt  pr_815.txt  pr_816.txt  pr_817.txt  pr_819.txt  pr_820.txt  pr_821.txt  pr_822.txt  pr_823.txt  pr_824.txt  pr_825.txt  pr_826.txt
pr-similarity-util/sample_data/open/: pr_583.txt  pr_606.txt  pr_613.txt  pr_618.txt  pr_630.txt  pr_634.txt  pr_637.txt  pr_639.txt  pr_645.txt  pr_652.txt  pr_660.txt  pr_668.txt  pr_738.txt  pr_746.txt  pr_757.txt  pr_802.txt  pr_805.txt  pr_812.txt  pr_818.txt  pr_827.txt
pr-similarity-util/src/: github.rs  lib.rs  main.rs
