[package]
name = "jira-similarity-util"
version = "0.1.0"
edition = "2021"  # Changed from 2024

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.21"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
tantivy = "0.19"
futures = "0.3"
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
git2 = "0.18"
rust-embed = "8.2"
rpassword = "7.3"