[package]
name = "pr_similarity_search"
version = "0.1.0"
edition = "2021"

[[example]]
name = "search_prs"
path = "examples/search_prs.rs"

[dependencies]
tantivy = { version = "0.22.0", default-features = false }
anyhow = "1.0.79"
octocrab = "0.32"
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.30"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.4", features = ["derive"] }